# librus-apix

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  LICENSE.orig  Makefile  README.md  README.md.orig  SECURITY.md  cookiecutter-config-file.yml  devenv.nix  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  pypi_release.yml  run_mock_tests.yml  static.yml
docker/: README.md
docs/: index.html  librus_apix.html  search.js
docs/librus_apix/: announcements.html  announcements.md  attendance.html  attendance.md  client.html  client.md  completed_lessons.html  completed_lessons.md  exceptions.html  exceptions.md  grades.html  grades.md  helpers.html  helpers.md  homework.html  homework.md  index.html  (+13 more)
examples/: announcements_example.py  attendance_example.py  completed_lessons_example.py  frequency_example.py  getting_token.py  grades_example.py  homework_example.py  messages_example.py  schedule_example.py  send_messages.py  student_information.py  timetable_example.py
librus_apix/: __init__.py  __main__.py  announcements.py  attendance.py  client.py  completed_lessons.py  exceptions.py  get_token.py  grades.py  helpers.py  homework.py  messages.py  notifications.py  schedule.py  student_information.py  timetable.py  urls.py
tests/: conftest.py  test_announcements.py  test_attendance.py  test_client.py  test_get_completed_lessons.py  test_grades.py  test_homework.py  test_messages.py  test_notifications.py  test_schedule.py  test_student_information.py  test_timetable.py
