[darglint]
# https://github.com/terrencepreilly/darglint
strictness = long
docstring_style = google
[metadata]
name = librus_apix
version = 0.2.6
license = MIT
description = Web Scraper for Librus Synergia
author = Pascal Jodłowski
url = https://github.com/poroknights/librus-apix
keywords = librus, scraper, api, synergia
classifiers =
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10

[options]
packages = librus_apix
install_requires =
  requests
  bs4
  lxml

[flake8]
max-line-length = 88
